--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 <body>
   <main>
     <article>
-      <div class="content_image">
+      <picture class="content_image">
+        <source srcset="./images/image-header-desktop.jpg" media="(min-width: 60rem)">
         <img src="./images/image-header-mobile.jpg" alt="Three woman working in the office">
-      </div>
-      <div class="content">
-        <h1>Get <span>insights</span> that help your business grow.</h1>
-        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
-          experience, and overall efficiency.</p>
-      </div>
-      <div class="content_stats">
-        <div class="stats">10k+<span>companies</span></div>
-        <div class="stats">314<span>templates</span></div>
-        <div class="stats">12M+<span>queries</span></div>
+      </picture>
+      <div class="card_content">
+        <div class="content">
+          <h1>Get <span>insights</span> that help your business grow.</h1>
+          <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+            experience, and overall efficiency.</p>
+        </div>
+        <div class="content_stats">
+          <div class="stats">10k+<span>companies</span></div>
+          <div class="stats">314<span>templates</span></div>
+          <div class="stats">12M+<span>queries</span></div>
+        </div>
       </div>
     </article>
   </main>
